<resources>
    <string name="app_name">EncounterArena</string>
    <string name="name">Tournament Name</string>
    <string name="rs">\u20B9</string>
    <string name="room_id">Room Id</string>
    <string name="date">Date</string>
    <string name="max_players">Max Players</string>

    <string name="login">Login</string>
    <string name="admin">Admin</string>
    <string name="partner">Partner</string>
    <string name="user">User</string>
    <string name="player">Player</string>
    <string name="signup">Sign Up ? Click here</string>
    <string name="signin">Sign In ? Click here</string>
    <string name="add_money">Add Money</string>
    <string name="only_signup">Sign Up</string>
    <string name="only_signin">Sign In</string>
    <string name="new_player">New Player</string>
    <string name="pubg_id">PUBG ID</string>
    <string name="filter_title_pubg">PubG Money Room</string>
    <string name="Rs">\u20B9</string>
    <string name="youtube_link">Youtube Link</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="battle_spree">Battle Spree</string>
    <string name="wallet">My Wallet</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="edittext_hint">
        <font size="30">0</font>
    </string>
</resources>
